--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     }],
     "require": {
         "php": ">=5.4",
-        "ext-phalcon": "2.*"
+        "ext-phalcon": ">=2.0"
     },
     "autoload": {
         "psr-4": {
